Added Italian translation! (Machine translated)

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,7 +7,8 @@
 
 		<div class="field">
 			<img id="captcha-image">
-			<button type="button" class="button is-success colored" onclick="refreshCaptcha()"
+			<button type="button" class="button is-success colored"
+				onclick="refreshCaptcha()"
 				style="height: 70px; width: 70px; font-size: 1.7rem; margin-left: 12px;">
 				<i class="fa fa-sync"></i>
 			</button>
@@ -19,7 +20,7 @@
 		<div style="padding-top: 4px;"></div>
 
 	</div>
-	
+
 	<div th:fragment="header">
 		<nav class="navbar is-info">
 			<div class="navbar-brand">
