--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -9,7 +9,7 @@
 }
 
 #banner {
-	background-image: url('/img/banner.jpg');
+	background-image: url('/img/banner.png');
 	height: 460px;
 	position: relative;
 	width: 100%;
