--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,6 +1,10 @@
 .cards {
 	padding: 1.5rem;
 }
+
+.column .card {
+	height: 100%;
+}
 .card-image {
 	font-size: 8rem;
 	padding-top: 2rem;
@@ -9,7 +13,7 @@
 }
 
 #banner {
-	background-image: url('/img/banner.png');
+	background-image: url('/img/banner.svg');
 	height: 460px;
 	position: relative;
 	width: 100%;
