--- a/src/main/resources/static/css/alovoa-dark.css
+++ b/src/main/resources/static/css/alovoa-dark.css
@@ -29,8 +29,10 @@ body *, container *, .label, .textarea, .select select {
 }
 
 .content-background {
-	background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%,
+	/*background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%,
 		rgba(46, 52, 54, 0.9) 10%, rgba(46, 52, 54, 0.9) 100%);
+		*/
+	background: rgba(46, 52, 54, 0.9);
 }
 
 textarea::placeholder {
