--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -5,8 +5,8 @@
 
 .card {
 	padding: 24px;
+	box-sizing: border-box;
 	border: 1px solid #dbdbdb;
-	margin-bottom: 24px;
 }
 
 .button.colored svg {
@@ -25,6 +25,15 @@
 	padding-top: 36px;	
 }
 
+.swiper-container {
+      width: 100%;
+      height: 100%;
+}
+
+.swiper-slide {
+	height: auto;
+}
+
 @media screen and (max-width: 1024px) {
 	.card.is-horizontal {
 		flex-direction: column !important;
@@ -35,6 +44,8 @@
 		border-radius: 0px !important;
 		height: calc(100vh - 236px);
 		position: relative;
+		padding: 0px;
+		padding-top: 4px !important;
 	}
 	.card-image {
 		z-index: 1;
@@ -45,6 +56,12 @@
 		margin-top: -150px;
 		position: absolute;
 		bottom: 0;
+		
+		width: 100%;
+		
+		margin: 0;
+		padding: initial !important;
+		width: 100%;
 	}
 	.card-content .content {
 		height: initial;
@@ -63,11 +80,22 @@
 	.content-background {
 		height: 100%;
 		z-index: 0;
-		background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(255,255,255,0.9) 10%, rgba(255,255,255,0.9) 100%);
+		/*background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(255,255,255,0.9) 10%, rgba(255,255,255,0.9) 100%);*/
+		background: rgba(255,255,255,0.9)
 	}
 	
 	.profile-bottom.dimmed {
 		background: rgba(255,255,255,0.9)
+	}
+	
+	.profile-bottom {
+		padding-left: 12px;
+		padding-right: 12px;
+	}
+	
+	.content {	
+		padding: 12px;
+		padding-top: 36px;	
 	}
 }
 /*very small screens*/
@@ -81,12 +109,7 @@
 	#sort-search-spacing {
 		padding-left: 4px !important;
 	}
-	.image img {
-		padding-bottom: 4px;
-		max-width: initial;
-		min-height: 100vw;
-		min-width: 100vw;￼
-	}
+	
 	.media {
 		margin-top: 0.2em !important;
 		margin-bottom: 0.2em !important;
@@ -95,32 +118,37 @@
 		display: none;
 	}
 	.card {
-		padding: 1em 0em;
+		padding: 0px;
 		height: calc(100vh - 132px);
+		padding-top: 0px !important;
+	}
+	
+	.card-image {
+		width: 100%;
 	}
 	
 	.card-content {
 		margin: 0;
 		padding: initial !important;
-	}
-	.content {	
-		padding: 12px;
-		padding-top: 36px;	
+		width: 100%;
 	}
 	
-	.profile-bottom {
-		padding-left: 12px;
-		padding-right: 12px;
+	.profile-pic {
+	    border-radius: 0px;
+	}
+	
+		.image img {
+		max-height: calc(100vh - 0px);
+		max-width: calc(100vh - 0px);
+		margin-bottom: 24px;
+		/*width: auto;*/
+		/*height: auto;*/
 	}
 }
 
-/*https://github.com/jgthms/bulma/pull/1596#issuecomment-556416927*/
 .card.is-horizontal {
 	flex-direction: row;
 	display: flex;
-	flex-basis: 50ex;
-	flex-grow: 0;
-	flex-shrink: 1;
 	box-shadow: none;
 }
 
