--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -10,6 +10,7 @@
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
+<link rel="stylesheet" href="/css/lib/swiper.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
 <link rel="stylesheet" href="/css/search.css" />
 <link th:if="${user.theme == 1}" rel="stylesheet" href="/css/alovoa-dark.css" />
@@ -64,6 +65,7 @@
 
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/lib/swiper.min.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/tools/getText.js"></script>
 	<script src="/js/search.js"></script>
