--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -169,7 +169,7 @@
 			<div class="swiper-container"  th:id="${user.idEncoded}">
 				<div class="swiper-wrapper">
 
-					<div class="swiper-slide" style="background-color: #48c774;"></div>
+					<div class="swiper-slide colored" style="background-color: #48c774 ; display: flex; align-items:center; justify-content:center"><i class="fa fa-thumbs-up fa-10x"></i></div>
 					<div class="swiper-slide">
 						<div class="card is-horizontal" style="width: 100%;">
 							<div class="card-image" onclick="toggleCardContent()">
@@ -226,7 +226,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="swiper-slide" style="background-color: #f14668;"></div>
+					<div class="swiper-slide colored" style="background-color: #f14668;  display: flex; align-items:center; justify-content:center;"><i class="fa fa-thumbs-down fa-10x"></i></div>
 				</div>
 			</div>
 			<div style="margin-bottom: 24px;"></div>
