--- a/resources/templates/profile.html
+++ b/resources/templates/profile.html
@@ -58,7 +58,7 @@
 							</div>
 							<div class="swiper-slide center-parent" style="height: 100%;">
 								<button th:if="${#lists.size(user.images) != imageMax}"
-									id="addImageDiv" class="center-parent"
+									id="addImageDiv" class="center-parent button"
 									style="height: 400px; max-height: 100%; max-width: 100%; width: 400px;">
 									<i width=400 height=400 class="fa fa-plus fa-4x"></i>
 								</button>
