--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -49,7 +49,7 @@
 					<div>
 	
 						<label class="label" th:text="#{search}"></label>
-						<button class="button colored is-info" onclick="search()">
+						<button class="button colored is-info" onclick="search()" style="width: 40px;">
 							<i class="fa fa-search"></i>
 						</button>
 					</div>
