--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -45,7 +45,7 @@
 		height: calc(100vh - 236px);
 		position: relative;
 		padding: 0px;
-		padding-top: 4px !important;
+		/*padding-top: 4px !important;*/
 	}
 	.card-image {
 		z-index: 1;
