Improved algorithm to receive new messages to reduce used data

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 
+	<div th:fragment="empty"></div>
+
 	<div th:fragment="captcha">
 		<input id="captcha-id" name="captchaId" type="hidden">
 
