Updated Spring version to 2.3.5 (2.4.0 still has some issues!) Messages now allow HTML tags Starting video chat will automatically send a message with the link to the partner Smaller and more elegant bubbles in notification.html and message.html Further improved UI

--- a/src/main/resources/static/css/alovoa-dark.css
+++ b/src/main/resources/static/css/alovoa-dark.css
@@ -1,3 +1,4 @@
+
 body, .card, .box, .textarea, .footer, .table, .select select, select option
 	{
 	background-color: #2e3436;
@@ -52,6 +53,10 @@ body *, container *, .label, .textarea, .select select {
 textarea::placeholder {
 	color: white !important;
 	opacity: 0.5;
+}
+
+.title {
+	color: white;
 }
 
 @media screen and (max-width: 1024px) {
