--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -29,7 +29,7 @@
 							<figure class="image" >
 								<img th:src="${notification.userFromDto.profilePicture}"
 									class="profile-pic"
-									style="max-height: 200px; max-width: 200px; margin: 0;">
+									style="margin: 0;">
 							</figure>
 						</div>
 						<div class="card-content">
