--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -41,12 +41,12 @@
 								<div class="center-parent">
 									<img id="profilePicture" class="profile-pic"
 										src="/img/profile.jpg" style="cursor: pointer;" height=400
-										width="400" th:unless="${user.profilePicture}"  th:value=0 /> <img
-										id="profilePicture" style="cursor: pointer;" height=400
+										width="400" th:unless="${user.profilePicture}" th:value=0 />
+									<img id="profilePicture" style="cursor: pointer;" height=400
 										width="400" th:if="${user.profilePicture}"
-										class="profile-pic " th:src="${user.profilePicture}" th:value=1 /> <input
-										id="profilePictureUpload" type="file" accept="image/*"
-										style="display: none">
+										class="profile-pic " th:src="${user.profilePicture}"
+										th:value=1 /> <input id="profilePictureUpload" type="file"
+										accept="image/*" style="display: none">
 								</div>
 							</div>
 							<div th:each="img : ${user.images}" class="swiper-slide">
@@ -71,8 +71,6 @@
 						<div class="swiper-button-next"></div>
 						<div class="swiper-button-prev"></div>
 					</div>
-
-
 
 				</div>
 
@@ -204,12 +202,12 @@
 				<div class="box">
 					<div class="field">
 						<label class="label" th:text="#{profile.userdata.request}"></label>
-						<div class="field">
+						<div class="field" style="display:flex">
 							<input class="input" type="password" th:placeholder="#{password}"
 								id="userdata-password" th:if="${user.password}"> <input
 								name="password" th:unless="${user.password}" value="" hidden>
 							<div style="padding-top: 4px;"></div>
-							<button class="button" id="userdata-submit" th:text="#{submit}"></button>
+							<button class="button" id="userdata-submit" th:text="#{submit}" style="margin-left: 4px;"></button>
 						</div>
 					</div>
 				</div>
@@ -217,12 +215,12 @@
 				<div class="box">
 					<div class="field">
 						<label class="label" th:text="#{profile.account.delete}"></label>
-						<div class="field">
+						<div class="field" style="display:flex">
 							<input class="input" type="password" th:placeholder="#{password}"
 								id="delete-acc-password" th:if="${user.password}"> <input
 								name="password" th:unless="${user.password}" value="" hidden>
 							<div style="padding-top: 4px;"></div>
-							<button class="button" id="delete-acc-submit" th:text="#{submit}"></button>
+							<button class="button" id="delete-acc-submit" th:text="#{submit}" style="margin-left: 4px;"></button>
 						</div>
 					</div>
 				</div>
