--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -14,7 +14,7 @@
 <title th:text="#{donate.title}"></title>
 </head>
 <body>
-	<div>
+	<div id="main">
 		<header th:insert="fragments.html::header"></header>
 		<div class="section">
 			<div class="container">
